--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   /* HERE WE USE 2.. IN THE ADDRESS BECAUSE IT MUST GO TWICE BACK */
   /*background-image: url("../images/backImage7.jpeg");*/
   
-  background-color: #dc6e28;
+  background-color: #183ee7;
   /* background-color: aqua; */
   margin: 0px;
 }
